--- a/ark_co184_splash_damage.Chernarus_winter/todo.txt
+++ b/ark_co184_splash_damage.Chernarus_winter/todo.txt
@@ -84,3 +84,4 @@
 	- Retaliation strikes???
 	- When using cars, roadblocks?
 
+- Commands to do arty: https://github.com/Ligthert/LT_A3_MPMissions/blob/7bb757c85084196980790175051fd5057414e72d/LTOP_Fighting_Fuck_Toys.IslaDuala3/fuckPlayers.sqf#L17-L18
